Adjust font titles

--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
+@import url('https://fonts.googleapis.com/css?family=Chewy');
 /* General styles for all pages */
 body {
     font-family: 'Times New Roman', Times, serif;
     line-height:1.5;
 }
 
-h1,
-h2,
-h3 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 920;     
+h1 {
+    text-shadow: 5px 5px 15px rgba(0,0,0,.25);
+    font-family: 'Chewy', cursive;
+    font-size: 3rem; 
+}
+
+h2 {
+    text-shadow: 5px 5px 15px rgba(0,0,0,.25);
+    font-family: 'Chewy', cursive;
+    font-size: 2rem;
 }
 
 a {
@@ -25,7 +31,7 @@ a {
 .container {
     max-width: 450px;
     margin: 150px auto;
-    padding: 40px 0 40px;
+    padding: 10px 0 40px;
     border: 2px solid darkred;
     background-color: #FFFAFA;
     border-radius: 10px;
@@ -63,7 +69,7 @@ p {
         max-width: 500px;
         max-height: 600px;
         margin: 80px auto;
-        padding: 40px 0 40px;
+        padding: 0px 0px 40px;
         border: 2px solid darkred;
         background-color: #FFFAFA;
         border-radius: 10px;
