--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Chewy');
 /* General styles for all pages */
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'Times New Roman', Times, serif;
     line-height:1.5;
@@ -8,7 +17,8 @@ body {
 h1 {
     text-shadow: 5px 5px 15px rgba(0,0,0,.25);
     font-family: 'Chewy', cursive;
-    font-size: 3rem; 
+    font-size: 3.5rem;
+    padding: 0;
 }
 
 h2 {
@@ -29,34 +39,88 @@ a {
 
 
 .container {
-    max-width: 450px;
-    margin: 150px auto;
-    padding: 10px 0 40px;
-    border: 2px solid darkred;
-    background-color: #FFFAFA;
+    width: 430px;
+    margin: 130px auto;
+    padding: 40px 40px 45px;
+    border: 2px solid brown;
+    background: linear-gradient(to bottom, rgba(255, 218, 218, 0.185), rgb(243, 231, 231));
     border-radius: 10px;
-    box-shadow: 5px 5px 10px darkgray;
+    box-shadow: 5px 5px 5px darkgray;
     text-align: center;  
 }
 
 img {
     width: 200px;
-    padding: 30px
+    margin: 35px auto;    
 }
 
 
-p {
-    margin: auto 100px;
+.page-description {
+    margin: 0px auto;
+    padding: 0px 60px;
     font-style: italic;
 }
 
-.recipes-list {
-    width: 150px;
-    margin: auto 120px;
-    padding: 20px 50px 10px;
-    list-style-type: circle;
-    text-align: left;
-    line-height: 1.2;    
+.recipeslist {
+    text-align: center;
+    margin: 20px auto;
+        
+}
+
+.recipeslist,
+p {
+    margin: 0;
+    padding: 15px 0;
+}
+
+.recipe1 {
+    display: inline-block;
+    background-color: salmon;
+    color: white;
+    width: 80px;
+    height: 100px;
+    box-shadow: 2px 2px 2px darkgray;
+    border-radius: 5px;
+    margin-right: 10px;
+    font-weight: bold;           
+}
+
+.recipe1:hover {
+    background: linear-gradient(to bottom, salmon, orangered); 
+    
+}
+
+.recipe2 {
+    display: inline-block;
+    background-color: chocolate;
+    color: white;
+    width: 80px;
+    height: 100px;
+    text-align: center;
+    box-shadow: 2px 2px 2px darkgray;
+    border-radius: 5px;
+    margin-right: 10px;   
+    font-weight: bold;
+}
+
+.recipe2:hover {
+    background: linear-gradient(to bottom, chocolate, brown);    
+}
+
+.recipe3 {
+    display: inline-block;
+    background-color: goldenrod;
+    color: white;
+    width: 80px;
+    height: 100px;
+    text-align: center; 
+    box-shadow: 2px 2px 2px darkgray;  
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.recipe3:hover {
+    background: linear-gradient(to bottom, goldenrod, darkgoldenrod);
 }
 
 }
