--- a/style.css
+++ b/style.css
@@ -24,7 +24,19 @@ h1 {
 h2 {
     text-shadow: 5px 5px 15px rgba(0,0,0,.25);
     font-family: 'Chewy', cursive;
-    font-size: 2rem;
+    font-size: 2.5rem;
+    padding: 0px 54px;
+}
+
+h3 {
+    text-shadow: 5px 5px 15px rgba(0,0,0,.25);
+    font-family: 'Chewy', cursive;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+}
+
+h4 {
+    margin-bottom: 10px;
 }
 
 a {
@@ -40,6 +52,7 @@ a {
 
 .container {
     width: 430px;
+    height: 600px;
     margin: 130px auto;
     padding: 40px 40px 45px;
     border: 2px solid brown;
@@ -69,7 +82,7 @@ img {
 
 .recipeslist,
 p {
-    margin: 0;
+    margin-bottom: 25px;
     padding: 15px 0;
 }
 
@@ -130,14 +143,14 @@ p {
 .recipe-page {
 
     .recipe-container {
-        max-width: 500px;
-        max-height: 600px;
-        margin: 80px auto;
-        padding: 0px 0px 40px;
-        border: 2px solid darkred;
-        background-color: #FFFAFA;
+        width: 430px;
+        height: 600px;
+        margin: 130px auto;
+        padding: 40px 40px 15px;
+        border: 2px solid brown;
+        background: linear-gradient(to bottom, rgba(255, 218, 218, 0.185), rgb(243, 231, 231));
         border-radius: 10px;
-        box-shadow: 5px 5px 10px darkgray;
+        box-shadow: 5px 5px 5px darkgray;
         text-align: center; 
         overflow-y: auto; 
     }
@@ -147,44 +160,46 @@ p {
     }
 
     img {
-        max-width: 450px;
-        line-height: 0;
-        vertical-align:bottom;
+        max-width: 346px;
+        margin: 35px auto -10px;   
     }
 
     .recipe-description {
-        padding: 0 25px 0;
         text-align: justify;
+        margin-bottom: 20px;
     }
 
-    .caption {
-        margin: 0;
+    .caption-img {
         text-align:center;
+        margin-bottom: 20px;
+    }
+
+    .caption-src {
+        text-align:center;        
     }
 
     .homepage-link {
         position: absolute;
-        top: 40px;
-        padding-left: 25px;
+        top: 107px;
         font-size: small;      
     }
 
     .ingredients-list {
         width: 250px;
-        margin: auto 130px;
-        padding: 0px 0px 0px;
+        margin: 0px auto;
+        padding: 0 25px 25px;
         list-style-type: circle;
         text-align: left;
         line-height: 1.2;     
     }
     
     .steps-list {
+        width: 300px;
         text-align: left;
         line-height: 1.2;   
-        padding: 25px;
+        padding: 0 25px 25px;
         display: grid;
-        margin-left: 30px;
-        margin-right: 30px;
+        margin: 0px auto;
         gap: 10px;
         text-align: justify;          
     }
